storage/innobase/dict/dict0load.cc
@@ -2576,6 +2576,12 @@ corrupted:
 			    != DB_SUCCESS) {
 				goto func_exit;
 			}
+
+			for (uint i = 0; i < index->n_fields; i++) {
+				dict_field_t &f = index->fields[i];
+				ut_ad(f.col->mbmaxlen == 0
+				      || f.prefix_len % f.col->mbmaxlen == 0);
+			}
 		}
 next_rec:
 		btr_pcur_move_to_next_user_rec(&pcur, &mtr);
